2011-05-08 mmichaud <michael.michaud@free.fr>
    * added some I18N strings (tab Skin of Option menu, Tooltip for NoteTool,
      Plume tool, AdvancedMeasureTool)
    * Moved SaveLegendPlugIn from Layer main menu to LayerName popup menu
    * Moved CopyImagePlugIn from View to File menu
    * Moved EasyButtonsPlugIn from View to Customize
    * Add Icon to SaveLegendPlugIn

2011-04-20 mmichaud <michael.michaud@free.fr>
    * added org.openjump.core.ui.plugin.file.SaveLayersWithoutDataSourcePlugIn
      the plugin is deactivated by default but it is called by SaveProjectAsPlugIn
      
2011-04-13 mmichaud <michael.michaud@free.fr>
    * Small improvements of RunDataStoreQueryPanel : remove the option to set
      Max Features (can be set with a limit SQL clause) and add a textField to
      input the Layer Name
    * Can now persist editable, selectable and readonly attributes in the
      project (bug id 2680312)

2011-04-05 mmichaud <michael.michaud@free.fr>
    * org.openjump.core.ui.plugin.tools.statistics.StatisticOverViewPlugIn
      Fix bug 3229892 throwing NPE while processing an empty layer
    * org.openjump.core.ui.plugin.tools.analysis.onelayer.MergeSelectedPolygonsWithNeighbourPlugIn
      Fix bug 3060942 : merge selected polygons with adjacent polygons having the
      largest area was not working because it tried to merge polygons with themselves

2011-04-04 mmichaud <michael.michaud@free.fr>
    * org.openjump.core.ui.plugin.datastore.RefreshDataStoreQueryPlugIn
      Fix bug 3261222 : refreshed DataStoreQueryLayer is no more tagged modified
    
2011-04-02 mmichaud <michael.michaud@free.fr>
    * 2 icons from Giuseppe added to layerNamePanel context menu for copy
      and paste style plugins

2011-04-01 lreeder <>
    * Updated WKBGeometryValueConverter to handle geometry types represented
      by WKB hex string so that ST_AsBinary is optional

2011-03-23 mmichaud <michael.michaud@free.fr>
    * New MultiInputDialog :